--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -30,8 +30,23 @@ jobs:
           node-version: lts/*
           cache: 'npm'
 
+      - name: Ensure lock file exists
+        run: |
+          if [ ! -f package-lock.json ] && [ ! -f yarn.lock ]; then
+            echo "No lock file found, generating package-lock.json..."
+            npm install
+            git add package-lock.json
+            git commit -m "Add package-lock.json for CI" || echo "Nothing to commit"
+          fi
+
       - name: Install dependencies
-        run: npm ci
+        run: npm ci || npm install
+
+      - name: Run lint (if available)
+        run: npm run lint --if-present
+
+      - name: Run tests (if available)
+        run: npm test --if-present
 
       - name: Build production bundle
         run: npm run build
