--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,4 +1,17 @@
+name: Build and Deploy to GitHub Pages
 
+on:
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: 'pages'
   cancel-in-progress: true
 
 jobs:
@@ -48,3 +61,4 @@ jobs:
 
       - name: Deploy to GitHub Pages
         id: deploy
+        uses: actions/deploy-pages@v4
